Pequenas correções e ajustes; Implementei a funcionalidades F1 p/ acionar tela sobre;